--- a/css/index.less
+++ b/css/index.less
@@ -5,27 +5,32 @@
     list-style: none;
 }
 html, body{
-    padding: 10px 100px;
+    padding: 10px 200px;
     font-size: 12px;
     font-family: "Microsoft YaHei"
 }
 .box{
-    width: 750px;
-    height: 385px;
+    width: 752px;
+    height: auto;
     border: 1px solid #eee;
-    padding: 6px 10px 0px 10px;
+    //padding: 6px 10px 0px 10px;
+    overflow: hidden;
     .header{
         height: 35px;
-        overflow: hidden;
-        border-bottom: 1px solid #eee;
+        //overflow: hidden;
+        //border-bottom: 1px solid #eee;
         position: relative;
+        line-height: 35px;
         .preYear{
             float: left;
             cursor: pointer;
             display: none;
         }
         .preMon{
-            float: left;
+            position: absolute;
+            z-index: 2;
+            left: 16px;
+            top: 0;
             cursor: pointer;
         }
         .nextYear{
@@ -34,8 +39,30 @@ html, body{
             display: none;
         }
         .nextMon{
-            float: right;
+            position: absolute;
+            z-index: 2;
+            right: 16px;
+            top: 0;
             cursor: pointer;
+        }
+        .predate{
+            height: 35px;
+            width: 50%;
+            position: absolute;
+            left: -376px;
+            top: 0;
+            cursor: pointer;
+            background: skyblue;
+            li{
+                float: left;
+                text-align: center;
+                &:first-child{
+                    margin-left: 140px;
+                }
+                &:nth-child(2){
+                    margin-left: 13px;
+                }
+            }
         }
         .leftdate{
             height: 35px;
@@ -43,15 +70,55 @@ html, body{
             position: absolute;
             left: 0;
             top: 0;
-            // background: Cyan;
+            cursor: pointer;
+            li{
+                float: left;
+                text-align: center;
+                &:first-child{
+                    margin-left: 140px;
+                }
+                &:nth-child(2){
+                    margin-left: 13px;
+                }
+            }
         }
         .rightdate{
             height: 35px;
             width: 50%;
             position: absolute;
-            right: 0;
+            left: 50%;
             top: 0;
+            cursor: pointer;
             //background: skyblue;
+            li{
+                float: left;
+                text-align: center;
+                &:first-child{
+                    margin-left: 140px;
+                }
+                &:nth-child(2){
+                    margin-left: 13px;
+                }
+            }
+        }
+        .nextTowdate{
+            height: 35px;
+            width: 50%;
+            position: absolute;
+            left: 100%;
+            top: 0;
+            cursor: pointer;
+            background: skyblue;
+            li{
+                float: left;
+                text-align: center;
+                &:first-child{
+                    margin-left: 140px;
+                }
+                &:nth-child(2){
+                    margin-left: 13px;
+                }
+            }
         }
     }
     .week{
@@ -60,6 +127,7 @@ html, body{
             height: 20px;
             float: left;
             width: 350px;
+            margin:0 13px;
             li{
                 float: left;
                 width: 50px;
@@ -72,6 +140,7 @@ html, body{
             height: 20px;
             float: right;
             width: 350px;
+            margin:0 13px;
             li{
                 float: left;
                 width: 50px;
@@ -82,34 +151,101 @@ html, body{
         }
     }
     .con{
-        .leftul{
-            height: auto;
+        padding-bottom: 1px;
+        min-height: 250px;
+        position: relative;
+        overflow: hidden;
+        .preul{
+            height: 251px;
             float: left;
             width: 350px;
+            position: absolute;
+            left: -363px;
+            top: 0;
+            background: Cyan;
             li{
                 float: left;
-                width: 50px;
-                height: 50px;
+                width: 51px;
+                height: 51px;
                 text-align: center;
-                line-height: 50px;
+                line-height: 51px;
                 cursor: pointer;
                 box-sizing: border-box;
                 margin: 0 0 -1px -1px;
             }
             .cur{
                 border: 1px solid #eee;
+            }
+        }
+        .leftul{
+            float: left;
+            width: 350px;
+            //position: absolute;
+            margin-left: 13px;
+            li{
+                float: left;
+                width: 51px;
+                height: 51px;
+                text-align: center;
+                line-height: 51px;
+                cursor: pointer;
+                box-sizing: border-box;
+                margin: 0 0 -1px -1px;
+            }
+            .cur{
+                border: 1px solid #eee;
+            }
+            .nowCss{
+                // background: #D1A361;
+                // color: #fff;
+                // border: 1px solid #D1A361;
+            }
+            .pastCss{
+                color: #FFCACCCD;
             }
         }
         .rightul{
             height: auto;
-            float: right;
+            float: left;
             width: 350px;
+            //position: absolute;
+            margin-left: 26px;
             li{
                 float: left;
-                width: 50px;
-                height: 50px;
+                width: 51px;
+                height: 51px;
                 text-align: center;
-                line-height: 50px;
+                line-height: 51px;
+                cursor: pointer;
+                box-sizing: border-box;
+                margin: 0 0 -1px -1px;
+            }
+            .cur{
+                border: 1px solid #eee;
+            }
+            .nowCss{
+                // background: #D1A361;
+                // color: #fff;
+                // border: 1px solid #D1A361;
+            }
+            .pastCss{
+                color: #FFCACCCD;
+            }
+        }
+        .nextTowul{
+            height: 251px;
+            float: left;
+            width: 350px;
+            position: absolute;
+            left: 761px;
+            top: 0;
+            background: blue;
+            li{
+                float: left;
+                width: 51px;
+                height: 51px;
+                text-align: center;
+                line-height: 51px;
                 cursor: pointer;
                 box-sizing: border-box;
                 margin: 0 0 -1px -1px;
@@ -118,5 +254,14 @@ html, body{
                 border: 1px solid #eee;
             }
         }
+    }
+    .footer{
+        height: 40px;
+        margin: 0 16px;
+        background: #FFFCFCFC;
+        border-top: 1px solid #FFEAEBEF;
+        margin-top: 25px;
+        text-align: center;
+        line-height: 40px;
     }
 }
