--- a/css/index.less
+++ b/css/index.less
@@ -213,6 +213,11 @@ html, body{
                 color: #fff;
                 border: 1px solid #D1A361;
             }
+            .hoverLi{
+                background: Cyan;
+                color: #fff;
+                border: 1px solid #D1A361;
+            }
         }
         .rightul{
             height: auto;
@@ -244,6 +249,11 @@ html, body{
             }
             .selectedLi{
                 background: #D1A361;
+                color: #fff;
+                border: 1px solid #D1A361;
+            }
+            .hoverLi{
+                background: Cyan;
                 color: #fff;
                 border: 1px solid #D1A361;
             }
