--- a/css/index.less
+++ b/css/index.less
@@ -209,14 +209,14 @@ html, body{
                 cursor: default;
             }
             .selectedLi{
-                background: #D1A361;
+                background: #CFA972;
                 color: #fff;
-                border: 1px solid #D1A361;
+                border: 1px solid #CFA972;
             }
             .hoverLi{
-                background: Cyan;
+                background: #ECC896;
                 color: #fff;
-                border: 1px solid #D1A361;
+                border: 1px solid #ECC896;
             }
         }
         .rightul{
@@ -248,14 +248,14 @@ html, body{
                 cursor: default;
             }
             .selectedLi{
-                background: #D1A361;
+                background: #CFA972;
                 color: #fff;
-                border: 1px solid #D1A361;
+                border: 1px solid #CFA972;
             }
             .hoverLi{
-                background: Cyan;
+                background: #ECC896;
                 color: #fff;
-                border: 1px solid #D1A361;
+                border: 1px solid #ECC896;
             }
         }
         .nextTowul{
